# operator

./: README.md  homepage.py  homepage.spec  pyproject.toml  requirements.txt
.streamlit/: config.toml
ConvergenceLog/: read_convergence.py  v_change.py  vicki.py
MWHs/: MWHs..py  data_ltas.csv  data_ltas_og.csv  data_month.csv  data_month_og.csv  functions.py  savethis_polars.py  vicki.py
automations/: define_configure_market.py  file_explorer.py  operator_msg.py  posting_files.py
automations/Auction_Day/: email_test.py  sql_conn.py
automations/Auction_Summary/: helpers.py  main.py  tester.py
automations/Public Release/: admin.py  comparison.py  constants.py  create_sic_limits.py  data.py  funcs.py  publicrelease.py  read_credit_files.py  read_crr_files.py  todo.txt  zipit.py
automations/Rename/: funcs.py  main.py
automations/SAS_Tool/: bidsoffers_funcs.py  binding_funcs.py  funcs.py  main.py  send_email.py
components/: auction_dropdown.py  components.py  link_button.py
components/SQLqueries/: __init__.py  auction_analysis.py  get_auction_list.py  get_marketid.py
data/: Activity_Calendar.xlsx  Compare_df1.xlsx  Compare_df2.xlsx  df_activity_calendar.py
pages/: 1_Auction_Results.py  2_SAS_Tool.py  3_FTR_Market.py  5_Configure_Market.py  6_Auction_Summary.py  7_Rename_Tool.py
unused/: 4_Network_Model.py  4_📊_Dan_df.py  7_Excel_Plotter.py  9_Scripts.py  Table_Compare.py  check.py  failover.py
